--- a/views/pages/list.ejs
+++ b/views/pages/list.ejs
@@ -2,7 +2,10 @@
     <div class="container">
         <div class="panel panel-warning">
             <div class="panel-heading">
-                <h2>List Book</h2>
+                <div class="row">
+                    <h2 class="col-sm-6">List Book</h2>
+                    <h3 class="col-sm-6 text-right"><a href="/book/add">Add new</a></h3>
+                </div>
             </div>
             <div class="panel-body">
                 <div class="row justify-content-center">
@@ -34,7 +37,7 @@
                                             <%= book.detail%>
                                         </td>
                                         <td>
-                                            <img src="/images/book/<%= book.image%>" alt="<%= book.title%>">
+                                            <img src="/images/book/<%= book.image%>" alt="<%= book.title%>" width="150px">
                                         </td>
                                         <td>
                                             Edit | Delete
