--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -15,7 +15,7 @@
 
 <body>
     <% include partials/header%>
-        <div class="container-fluid">
+        <div class="container-fluid" style="padding-bottom:100px">
 
             <%- content %>
         </div>
