--- a/views/book/list.ejs
+++ b/views/book/list.ejs
@@ -39,7 +39,7 @@
                                             <%= book.detail%>
                                         </td>
                                         <td>
-                                            <img src="/images/book/<%= book.image%>" alt="<%= book.title%>" width="150px">
+                                            <img src="/public/images/book/<%= book.image%>" alt="<%= book.title%>" width="150px">
                                         </td>
                                         <td>
                                             <a href="/book/edit/<%= book._id%>">Edit</a> |
