--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,6 +19,11 @@
                 <a class="nav-link" href="/book">List book</a>
             </li>
         </ul>
+        <ul class="nav navbar-nav float-md-right">
+            <li class="nav-item">
+                <a class="nav-link" href="/user/register">Register</a>
+            </li>
+        </ul>
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
